# linux_labs

./: lab1_Melnik.docx  lab1a_Melnik.docx  lab1b_Melnik.docx  lab2b_Melnik.docx  lab2а_Melnik.docx  lab3_Melnik.docx  lab4_Melnik.docx  lab5_Melnik.docx
code_labs/lab1b/: foo.txt  foo.txt.bz2
code_labs/lab2_2/: ex1  ex2  ex3  ex4  ex5  ex6  example  some
code_labs/lab3/Lab2/: lab2  lab2.c
code_labs/lab3/lab2_melnik/: lab2  lab2.cpp  run_script
code_labs/lab3/lab3_melnik/: matrix.cpp  matrix_exe
code_labs/lab3/lab3_melnik/TGN/: controller.cpp  controller.h  model.cpp
code_labs/lab3/lab4_melnik/: Makefile  controller.cpp  controller.h  main  model.cpp  view.h
code_labs/lab3/lab4_melnik_add_rec/lab4_melnik/: CMakeLists.txt  main.cpp
code_labs/lab3/lab4_melnik_add_rec/lab4_melnik/include/: model.h
code_labs/lab3/lab4_melnik_add_rec/lab4_melnik/view/: view.cpp
code_labs/lab4/ex2/: Makefile  func1.cpp  func1.h  func2.cpp  func2.h  main  main.cpp
code_labs/lab4/lab4_1/: Makefile  main  main.cpp
code_labs/lab4/lab4_2/: main  main.cpp
code_labs/lab4/lab4_3/: Makefile  business_logic.h  business_logic2.h  main  main.cpp
code_labs/lab5/ex1/: socket1  socket1.c
code_labs/lab5/ex2/: getwwwpage  getwwwpage.c  index.html
code_labs/lab5/ex3/: socket2-client.c  socket2-server  socket2-server.c
code_labs/lab5/lab5_1/: client  client.c  server  server.c
code_labs/lab5/lab5_2/: getpage  getpage.c  main  main.c
code_labs/lab5/lab5_3/: client_tcp  client_tcp.c  client_udp  client_udp.c  server_tcp  server_tcp.c  server_udp  server_udp.c
(+10 files in other folders)
